Changelog
=========

2.7.1 (unreleased)
------------------

- Fix test failure by using multiple file instances. [busykoala]


2.7.0 (2019-08-28)
------------------

- Unhide logo viewlet. [busykoala]


2.6.1 (2019-08-22)
------------------

- Add ImageMagic dependency comment to readme. [busykoala]
- Change mailer encoding from win cp-1252 to utf-8 and refactor mailer. [busykoala]
- Rename ressources directory to resources. [busykoala]
- Remove teaserportlet and column/-renderer. [busykoala]


2.6.0 (2019-06-26)
------------------

- Use ftw.logo for subsite logo and remove previous viewlet [busykoala]


2.5.0 (2019-05-15)
------------------

- Add support for Plone 5.1. [mbaechtold]
- Make compatible with ftw.theming 2.0.0. [Kevin Bieri]
- Remove dependency on ftw.testing[splinter] (has been dropped in ftw.testing). [lgraf]


2.4.4 (2017-03-07)
------------------

- Make Subsite addable on plone site per default [raphael-s]


2.4.3 (2016-11-29)
------------------

- Make subsitelogoviewlet and the fallback logo more robust.
  [raphael-s]


2.4.2 (2016-11-28)
------------------

- Make subsitelogoviewlet only search for a subsite logo when the navigation
  root actually is a subsite.
  [raphael-s]


2.4.1 (2016-11-07)
------------------

- Prevent mobile customizations from loading when ftw.mobile is not installed.
  [raphael-s]


2.4.0 (2016-10-17)
------------------

- Add ftw.referencewidget and use it instead of plone.formwidget.contenttree.
  [tschanzt]


2.3.0 (2016-10-10)
------------------

- Hide the title of the subsite with CSS.
  [mbaechtold]


2.2.0 (2016-09-26)
------------------

- Fix actionmenu selectors to support structors without definition lists.
  [mathias.leimgruber]

- Reimplement AT=>DX migration with inplace migrator introduced in
  ftw.upgrade 2.0.0. [jone]

- Make ftw.subsite.Subsite linkable in TinyMCE.
  [raphael-s]

- Remove "@@" from simplelayout-view because it is not needed.
  [raphael-s]


2.1.0 (2016-07-20)
------------------
