@@ -13,3 +13,4 @@ eggs/
 parts/
 src/
 var/
+/node_modules/
