@@ -1,0 +1,5 @@
+({
+    optimizeCss: "standard",
+    cssIn: "./ftw/subsite/browser/resources/main.css",
+    out: "./ftw/subsite/browser/resources/subsite-compiled.css"
+})
