@@ -22,12 +22,6 @@
         <value>banners</value>
     </record>
 
-    <records prefix="plone.resources/subsite_css" interface='Products.CMFPlone.interfaces.IResourceRegistry'>
-        <value key="css">
-            <element>++resource++ftw.subsite-resources/subsite.css</element>
-        </value>
-    </records>
-
     <record name="plone.displayed_types">
         <value purge="false">
             <element>ftw.subsite.Subsite</element>
@@ -35,13 +29,13 @@
     </record>
 
     <records prefix="plone.bundles/ftw-subsite-resources" interface='Products.CMFPlone.interfaces.IBundleRegistry'>
-        <value key="resources">
-            <element>subsite_css</element>
-        </value>
         <value key="enabled">True</value>
-        <value key="depends">plone-legacy</value>
+        <value key="depends">plone</value>
+        <value key="stub_js_modules">jquery</value>
         <value key="compile">False</value>
-        <value key="csscompilation">++plone++subsite/ftw-subsite-compiled.css</value>
+        <value key="csscompilation">++resource++ftw.subsite-resources/subsite-compiled.css</value>
+        <value key="merge_with">default</value>
+        <value key="last_compilation">2019-12-07 15:25:00</value>
         <value key="merge_with">default</value>
     </records>
 
