@@ -1,10 +1,6 @@
 <?xml version="1.0"?>
 <registry>
 
-    <records prefix="plone.resources/subsite_css"
-             interface='Products.CMFPlone.interfaces.IResourceRegistry'
-             remove="True"/>
-
     <records prefix="plone.bundles/ftw-subsite-resources"
              interface='Products.CMFPlone.interfaces.IBundleRegistry'
              remove="True"/>
