@@ -1,0 +1,18 @@
+{
+  "name": "ftw.subsite",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:4teamwork/ftw.subsite.git",
+  "author": "4teamwork AG <info@4teamwork.ch>",
+  "license": "GPL2",
+  "private": true,
+  "devDependencies": {
+    "chokidar-cli": "^2.1.0",
+    "requirejs": "^2.3.6"
+  },
+  "scripts": {
+        "build": "r.js -o buildcss.js",
+        "build-css": "r.js -o buildcss.js",
+        "watch": "chokidar \"./ftw/subsite/browser/resources/(*.js|*.css)\" -i \"**/*-compiled.css\" -c \"r.js -o buildcss.js;\""
+    }
+}
